# Pheonix-Bot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
cogs/core/: commands.py  help.py  invite.py  ping.py  say.py  serverInfo.py  stat.py
cogs/fun/: 8b.py  avatar.py  dox.py
cogs/moderation/: ban.py  kick.py  purge.py
cogs/music/: disconnect.py  example.py  nightcore.py  pause.py  play.py  skip.py  volume.py
src/: main.py
src/utils/: constants.py
